# TP2

./: .gitignore  README.md
Assets/: MayorDeEdad.cs
Assets/Scenes/: SampleScene.unity
ProjectSettings/: ProjectSettings.asset
ej1/: CMakeLists.txt  makefile
ej1/example/: main.cpp
ej1/include/: info.hpp  libs.hpp  pokedex.hpp  pokedexHUD.hpp  pokemon.hpp  utils.hpp
ej1/src/: info.cpp  pokedex.cpp  pokedexHUD.cpp  pokemon.cpp  utils.cpp
ej2/: CMakeLists.txt  makefile
ej2/example/: main.cpp
ej2/include/: dronecamp.hpp
ej2/src/: dronecamp.cpp
ej3/: CMakeLists.txt  main.cpp  makefile
